--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ ih = "ipfs_hitter.__main__:main"
 python = "^3.10"
 fire = "^0.4.0"
 exitstatus = "^2.2.0"
+requests = "^2.28.1"
 
 [build-system]
 requires = ["poetry-core"]
